Fix footer on mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -208,7 +208,7 @@ footer {
     // margin-left: calc(var(--lineHeight) * -2);
     // margin-right: calc(var(--lineHeight) * -2);
     // margin-bottom: calc(var(--lineHeight) * -3);
-    padding: 24px 48px 72px 48px;
+    padding: 24px 24px 48px 24px;
     margin-left: -24px;
     margin-right: -24px;
     margin-bottom: -48px;
